updated loading state, attempt fix leaflet resolution on mobile

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -11,21 +11,11 @@
   z-index: 0;
 }
 
-.controls {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  margin: 40px;
-  z-index: 1;
-}
-
 .controlBar {
   display: flex;
   justify-content: flex-end;
-  /* Align button to the right */
   align-items: center;
   padding-top: 15px;
-  /* Add some space above the button */
 }
 
 .controlButton {
@@ -33,37 +23,8 @@
   border: none;
   cursor: pointer;
   font-size: 1.5rem;
-  /* Adjust icon size */
   color: #333;
-  /* Icon color */
   padding: 5px;
-}
-
-.controlButton:hover {
-  background-color: #0056b3;
-}
-
-.add {
-  width: 100px;
-  height: 90px;
-  padding: 0;
-  border-radius: 2rem;
-  background-color: #fff;
-  border: none;
-  color: #333;
-  font-size: 1.5rem;
-  font-weight: 600;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-  transition: transform 0.2s, background-color 0.2s, box-shadow 0.2s;
-}
-
-.add:hover {
-  transform: translateY(-1px);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .deleteButton {
